--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -4,7 +4,6 @@ body {
   
   font: {
     family: 'Russo One', sans-serif;
-    size: auto;
   }
 }
 
@@ -37,6 +36,30 @@ small {
 // Anchors
 a:hover { color: #fff; }
 a:link, a:visited, a:active { color: #F87920; }
+
+// Buttons
+.btn {
+  color: #333 !important;
+  border: .5px solid #000 !important;
+  cursor: pointer;
+  padding: 7px 20px;
+  min-width: 110px;
+  background: #EEEEEE;
+  transition: 0s background, 0s color;
+  
+  font: {
+    size: 16px;
+    family: 'Roboto', sans-serif;
+    weight: 600;
+  }
+  text: {
+    align: center;
+    transform: uppercase;
+    decoration: none;
+  }
+}
+
+.btn:hover { background: #888; }
 
 // Footer
 footer {
@@ -77,18 +100,4 @@ footer {
 .logo {
 border-radius: 10%;
 margin-top:5%;
-}
-
-.cool_button {
-  display: block;
-  padding: 10px;
-  background: rgba(25, 25, 25, .5);
-  border-radius: 10px;
-  color: #fff !important;
-}
-
-.cool_button:hover {
-  color: #F87920;
-  text-decoration: none;
-  background: #181818;
 }
