--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,14 +1,33 @@
 body {
   color: #FFFFFF;
+  display: flex;
   background: #333333 url('static/img/bg.png');
+  flex-direction: column;
   
   font: {
     family: 'Russo One', sans-serif;
   }
 }
 
+// Content
+.content {
+  width: auto;
+  min-width: 655px;
+  max-width: 630px;
+  margin-top: 60px;
+  background: rgba(0,0,0,.1);
+}
+
+// Logo
+.logo {
+  margin-top:5%;
+  border-radius: 10%;
+}
+
 // Break line
-hr { border-color: #000; }
+hr {
+  border-color: #000;
+}
 
 // Small text
 small {
@@ -30,7 +49,7 @@ small {
 
 // Text colors
 .sun { color: #f1c40f !important; }
-.gray { color: #cacaca; }
+.gray { color: #cacaca !important; }
 .emerald { color: #2ecc71 !important; }
 
 // Anchors
@@ -40,7 +59,7 @@ a:link, a:visited, a:active { color: #F87920; }
 // Buttons
 .btn {
   color: #333 !important;
-  border: .5px solid #000 !important;
+  border: .5px solid #000;
   cursor: pointer;
   padding: 7px 20px;
   min-width: 110px;
@@ -62,18 +81,18 @@ a:link, a:visited, a:active { color: #F87920; }
 .btn:hover { background: #888; }
 
 // Footer
-footer {
-  background-color: #272727;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 25px;
+.footer {
+  background-color: #23272A;
+  border-radius: 10%;
+  margin-bottom: 10px;
   width: 100%;
   overflow: hidden;
 }
 
 
 // Icon sets
+.projects { margin-left: 5%; }
+
 .icon_set a { color: #eee; }
 .icon_set i { margin: 0 5px; }
 .icon_set i:hover { color: #888; }
@@ -84,20 +103,12 @@ footer {
   margin-right: 4px;
 }
 
-.projects { margin-left: 5%; }
-
 // Unselectable text
 .unselectable {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
-}
-
-// Logo
-.logo {
-border-radius: 10%;
-margin-top:5%;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
