--- a/static/scss/404.scss
+++ b/static/scss/404.scss
@@ -1,30 +1,26 @@
 body {
-  background: #333333 url('../img/bg.png');
+  background: #333333 url('../img/bg2.png');
+  height: 100% !important;
   color: #ffffff;
-  
+
   font: {
     family: 'Russo One', sans-serif;
   }
 }
 
+// Logo
+.logo {
+  max-width: 200px;
+  max-height: 200px;
+}
+
 // Content
 .content {
   width: auto;
-  min-width: 655px;
-  max-width: 630px;
+  min-width: 800px;
+  max-width: 800px;
   margin-top: 60px;
   background: rgba(0, 0, 0, .5);
-}
-
-// Logo
-.logo {
-  margin-top: 5%;
-  border-radius: 10%;
-}
-
-// Break line
-hr {
-  border-color: rgba(0, 0, 0, 1);
 }
 
 // Small text
@@ -56,13 +52,13 @@ a:link, a:visited, a:active { color: #F87920; }
 
 // Buttons
 .btn {
-  color: #333 !important;
+  color: #cacaca !important;
   border: .5px solid #000;
   cursor: pointer;
   padding: 7px 20px;
   min-width: 110px;
-  background: #EEEEEE;
-  transition: 0s background, 0s color;
+  background: #000;
+  transition: .3s background, .3s color;
   
   font: {
     size: 16px;
@@ -76,7 +72,7 @@ a:link, a:visited, a:active { color: #F87920; }
   }
 }
 
-.btn:hover { background: #888; }
+.btn:hover { color: #000 !important; background: #cacaca; }
 
 // Footer
 .footer {
@@ -84,28 +80,4 @@ a:link, a:visited, a:active { color: #F87920; }
   border-radius: 5%;
   margin-bottom: 10px;
   width: 100%;
-}
-
-
-// Icon sets
-.projects { margin-left: 5%; }
-
-.icon_set a { color: #eee; }
-.icon_set i { margin: 0 5px; }
-.icon_set i:hover { color: #888; }
-
-.code-icons i {
-  cursor: pointer;
-  font-size: 34px;
-  margin-right: 4px;
-}
-
-// Unselectable text
-.unselectable {
-  user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
 }
